--- a/css/styles.css
+++ b/css/styles.css
@@ -24,3 +24,63 @@
         color: black;
         border: 2px solid #4caf50;
     }
+
+
+   #modal-container {
+       display: none;
+       position: fixed;
+       top: 0;
+       left: 0;
+       width: 100%;
+       height: 100%;
+       background-color: rgba(0, 0, 0, 0.5);
+       justify-content: center;
+       align-items: center;
+   }
+
+   .modal {
+       background-color: #fff;
+       padding: 20px;
+       border-radius: 8px;
+       box-shadow: 0 0 10px rgba(61, 55, 55, 0.3);
+       max-width: 400px;
+       width: 100%;
+       text-align: center;
+   }
+
+   .modal h1 {
+       font-size: 24px;
+       margin-bottom: 10px;
+       color: #333;
+       
+   }
+
+   .modal p {
+       font-size: 16px;
+       color: #666;
+       line-height: 1.5;
+   }
+
+   .modal-close {
+       position: absolute;
+       top: 10px;
+       right: 10px;
+       cursor: pointer;
+       background-color: #fff;
+       color: #333;
+       border: none;
+       padding: 8px 12px;
+       border-radius: 4px;
+       font-size: 14px;
+       font-weight: bold;
+       transition: background-color 0.3s, color 0.3s;
+   }
+
+   .modal-close:hover {
+       background-color: #333;
+       color: #fff;
+   }
+
+   #modal-container.is-visible {
+       display: flex;
+}
